@@ -21,6 +21,7 @@ package com.kuuhaku.controller.postgresql;
 import javax.persistence.EntityManager;
 import javax.persistence.Query;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class RankDAO {
 
@@ -66,7 +67,7 @@ public class RankDAO {
 		try {
 			return ((List<Object[]>) q.getResultList())
 					.stream().map(o -> (String) o[0])
-					.toList();
+					.collect(Collectors.toList());
 		} finally {
 			em.close();
 		}
@@ -93,7 +94,7 @@ public class RankDAO {
 		try {
 			return ((List<Object[]>) q.getResultList())
 					.stream().map(o -> (String) o[0])
-					.toList();
+					.collect(Collectors.toList());
 		} finally {
 			em.close();
 		}
@@ -125,7 +126,7 @@ public class RankDAO {
 		try {
 			return ((List<Object[]>) q.getResultList())
 					.stream().map(o -> (String) o[0])
-					.toList();
+					.collect(Collectors.toList());
 		} finally {
 			em.close();
 		}
@@ -154,7 +155,7 @@ public class RankDAO {
 		try {
 			return ((List<Object[]>) q.getResultList())
 					.stream().map(o -> (String) o[0])
-					.toList();
+					.collect(Collectors.toList());
 		} finally {
 			em.close();
 		}
